[gd_scene load_steps=8 format=3 uid="uid://dci2pq27hyacb"]

[ext_resource type="Shader" path="res://shaders/screen/ntsc.gdshader" id="1_miqdt"]
[ext_resource type="Script" path="res://scenes/rooms/garalina.gd" id="1_nljoc"]
[ext_resource type="Material" uid="uid://dr52yj2jvqaa7" path="res://post_process/dither-banding_mat.tres" id="2_1eamy"]
[ext_resource type="Texture2D" uid="uid://dujwlec6naqf5" path="res://graphics/sprites/ui/garalina/gen8.png" id="3_2t5xd"]
[ext_resource type="Texture2D" uid="uid://s7ehsrwcpto1" path="res://graphics/sprites/ui/garalina/logo.png" id="5_1h4hh"]
[ext_resource type="AudioStream" uid="uid://d00ryq8iag6r6" path="res://music/garalina.wav" id="5_cnx4t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_syp2d"]
shader = ExtResource("1_miqdt")

[node name="garalina" type="Node2D"]
script = ExtResource("1_nljoc")

[node name="PSXLayer" type="CanvasLayer" parent="."]

[node name="NTSC" type="SubViewportContainer" parent="PSXLayer"]
material = SubResource("ShaderMaterial_syp2d")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="NTSC_viewport" type="SubViewport" parent="PSXLayer/NTSC"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="Dither" type="SubViewportContainer" parent="PSXLayer/NTSC/NTSC_viewport"]
texture_filter = 1
material = ExtResource("2_1eamy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="dither_view" type="SubViewport" parent="PSXLayer/NTSC/NTSC_viewport/Dither"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="logo_anim_1" type="Sprite2D" parent="PSXLayer/NTSC/NTSC_viewport/Dither/dither_view"]
z_as_relative = false
texture = ExtResource("3_2t5xd")
centered = false
hframes = 13
vframes = 12

[node name="ColorRect" type="ColorRect" parent="PSXLayer/NTSC/NTSC_viewport/Dither/dither_view"]
z_index = -1
z_as_relative = false
offset_left = -10.0
offset_top = -4.0
offset_right = 330.0
offset_bottom = 248.0
color = Color(0.592157, 0.6, 0.6, 1)

[node name="logo_anim_2" type="Sprite2D" parent="PSXLayer/NTSC/NTSC_viewport/Dither/dither_view"]
visible = false
z_as_relative = false
texture = ExtResource("5_1h4hh")
centered = false
hframes = 8
frame = 4

[node name="fade_in" type="ColorRect" parent="PSXLayer/NTSC/NTSC_viewport/Dither/dither_view"]
z_as_relative = false
offset_right = 320.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)

[node name="fade_out" type="ColorRect" parent="PSXLayer/NTSC/NTSC_viewport/Dither/dither_view"]
z_as_relative = false
offset_right = 320.0
offset_bottom = 240.0
color = Color(1, 1, 1, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cnx4t")
autoplay = true
bus = &"Music"
